SystemUI: Bringup statusbar icons tuner [1/2]
* Split icon toggles to a separate page
* Remove deprecated TunerService usage
* Match theme with Settings

idoybh (YAAP):
* SwitchPreference -> SwitchPreferenceCompat fixes
* Fix insets
* Fixes for A15 theme

Change-Id: Icc84575db18931d3a43bd9e640f2a55a51b460c1

SystemUI: Bring in drawables for statusbar icon toggles

- Icons from aosp base and settings
- Minor edits for width, height, tint and color

From 'core/res/res/drawable' dir:
- ic_statusbar_auto_rotate - ic_qs_auto_rotate
- ic_statusbar_camera - ic_camera
- ic_statusbar_mute - ic_audio_ring_notif_mute
- ic_statusbar_wifi - ic_wifi_signal_4
- ic_statusbar_vibrate - ic_audio_ring_notif_vibrate
- ic_statusbar_alarm - ic_audio_alarm

From 'packages/SystemUI/res/drawable' dir:
- ic_statusbar_headset - ic_headset
- ic_statusbar_cast - ic_cast

From 'packages/apps/Settings/res/drawable' dir:
- ic_statusbar_work - ic_enterprise
- ic_statusbar_hotspot - ic_hotspot
- ic_statusbar_do_not_disturb - ic_do_not_disturb_on_24dp
- ic_statusbar_ethernet - ic_settings_ethernet
- ic_statusbar_mobile_network - ic_network_cell
- ic_statusbar_airplanemode - ic_airplanemode_active
- ic_statusbar_clock - ic_settings_date_time
- ic_statusbar_priority - ic_important_outline

Change-Id: Id30e5039e73068d0c73dd5fc7d0305865af1d791

SystemUI: Split status bar icon controls for vibrate and mute

- Give users the option to disable the Mute icon too as
  Volume icons got split in https://github.com/LineageOS/android_frameworks_base/commit/ca7ceb8aef3e3fb7a899c137efe0c00003499f6d
- Change Volume string to Vibrate to better reflect
  which icon is being disabled.

Change-Id: I1f8a0370f748cf40fc99584188c42bb2a0aa9856

SystemUI: Add statusbar NFC icon

* @/jhonboy121: simplify code

Change-Id: I2f37887a9913348e9fd3a81499de606d6f0f9029
[ghostrider-reborn: add tuner pref icon]
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

fixup! SystemUI: Add statusbar NFC icon

Change-Id: Id09dd7ad9cbf

--- a/packages/SystemUI/res/values/aospa_strings.xml
+++ b/packages/SystemUI/res/values/aospa_strings.xml
@@ -10,4 +10,9 @@
     <!-- Content description indicating that tapping the element will allow deleting the screenshot [CHAR LIMIT=NONE] -->
     <string name="screenshot_delete_description">Delete screenshot</string>
 
+    <!-- Status bar -->
+    <string name="status_bar_icons_title">Status bar icons</string>
+
+    <!-- Name of the nfc status bar icon. -->
+    <string name="status_bar_nfc">NFC</string>
 </resources>
