--- a/packages/SystemUI/res/values/aospa_strings.xml
+++ b/packages/SystemUI/res/values/aospa_strings.xml
@@ -15,4 +15,7 @@
 
     <!-- Name of the nfc status bar icon. -->
     <string name="status_bar_nfc">NFC</string>
+
+    <!-- Name of the roaming status bar icon. -->
+    <string name="status_bar_roaming">Roaming indicator</string>
 </resources>
