PIHooks: Spoof as Pixel Tab for tablets
Change-Id: I2d5c60dc144d56ed1957c5e2750fc60831bf2334

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -29,6 +29,9 @@
     <!-- Build fingerprint from stock ROM -->
     <string name="config_stockFingerprint" translatable="false"></string>
 
+    <!-- Whether to spoof GMS as Pixel Tablet -->
+    <bool name="config_spoofasTablet">false</bool>
+
     <!-- The list of components which should be automatically disabled for a specific device.
       Note: this MUST not be used to randomly disable components, ask for approval first! -->
      <string-array name="config_deviceDisabledComponents" translatable="false">
