--- a/packages/SystemUI/bcsmartspace/res/layout/smartspace_enhanced.xml
+++ b/packages/SystemUI/bcsmartspace/res/layout/smartspace_enhanced.xml
@@ -33,5 +33,6 @@
         android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:importantForAccessibility="no"/>
+        android:importantForAccessibility="no"
+        android:layoutDirection="ltr"/>
 </com.google.android.systemui.smartspace.BcSmartspaceView>
