--- a/packages/SystemUI/bcsmartspace/res/values/dimens.xml
+++ b/packages/SystemUI/bcsmartspace/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:androidprv="http://schemas.android.com/apk/prv/res/android">
     <dimen name="ambient_text_shadow_radius">1.5dip</dimen>
+    <dimen name="date_weather_view_height">24.0dp</dimen>
     <dimen name="enhanced_smartspace_base_action_icon_margin">8dp</dimen>
     <dimen name="enhanced_smartspace_card_height">76dp</dimen>
     <dimen name="enhanced_smartspace_combination_card_padding">8dp</dimen>
